--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/OutputResidualVoltage.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/OutputResidualVoltage.xaml
@@ -37,10 +37,10 @@
 
     <Label Grid.Column="0" Grid.Row="1" Content="Напр. управления, В" Visibility="{Binding ShowVoltage, Converter={StaticResource B2V}}" />
     <customControls:NumericUpDown Grid.Column="1" Grid.Row="1" Visibility="{Binding ShowVoltage, Converter={StaticResource B2V}}" Value="{Binding ControlVoltage, Converter={StaticResource DML}}"
-                                  Minimum="{Binding ControlVoltageMin}" Maximum="{Binding ControlVoltageMax}"/>
+                                  Minimum="{Binding ControlVoltageMin}" Maximum="{Binding ControlVoltageMax}" MirroredNegativeMinMax="True"/>
     <Label Grid.Column="0" Grid.Row="1" Content="Ток управления, мА" Visibility="{Binding ShowAmperage, Converter={StaticResource B2V}}"/>
     <customControls:NumericUpDown Grid.Column="1" Grid.Row="1" Visibility="{Binding ShowAmperage, Converter={StaticResource B2V}}" Value="{Binding ControlCurrent, Converter={StaticResource DML}}" 
-                                  Minimum="{Binding ControlCurrentMin}" Maximum="{Binding ControlCurrentMax}"/>
+                                  Minimum="{Binding ControlCurrentMin}" Maximum="{Binding ControlCurrentMax}" MirroredNegativeMinMax="True"/>
 
 
 
@@ -66,7 +66,7 @@
         </TextBlock>
     </Label>
     <customControls:NumericUpDown Grid.Column="1" Grid.Row="3"   Value="{Binding SwitchedAmperage, Converter={StaticResource DML}}" 
-                                  Minimum="{Binding SwitchedAmperageMin}" Maximum="{Binding SwitchedAmperageMax}"/>
+                                  Minimum="{Binding SwitchedAmperageMin}" Maximum="{Binding SwitchedAmperageMax}" MirroredNegativeMinMax="True"/>
 
     <Label Grid.Column="0" Grid.Row="4"  Visibility="{Binding ShowAuxiliaryVoltagePowerSupply1, Converter={StaticResource B2V}}">
             <TextBlock>
