--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/OutputLeakageCurrentTemplate.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/OutputLeakageCurrentTemplate.xaml
@@ -36,10 +36,10 @@
 
     <Label Grid.Column="0" Grid.Row="1" Content="Напр. управления, В" Visibility="{Binding ShowVoltage, Converter={StaticResource B2V}}" />
     <customControls:NumericUpDown Grid.Column="1" Grid.Row="1"  Visibility="{Binding ShowVoltage, Converter={StaticResource B2V}}" Value="{Binding ControlVoltage, Converter={StaticResource DML}}" 
-                                  Minimum="{Binding ControlVoltageMin}" Maximum="{Binding ControlVoltageMax}"/>
+                                  Minimum="{Binding ControlVoltageMin}" Maximum="{Binding ControlVoltageMax}" MirroredNegativeMinMax="True"/>
     <Label Grid.Column="0" Grid.Row="1" Content="Ток управления, мА" Visibility="{Binding ShowAmperage, Converter={StaticResource B2V}}"/>
     <customControls:NumericUpDown Grid.Column="1" Grid.Row="1" Visibility="{Binding ShowAmperage, Converter={StaticResource B2V}}" Value="{Binding ControlCurrent, Converter={StaticResource DML}}" 
-                                  Minimum="{Binding ControlCurrentMaximumMin}" Maximum="{Binding ControlCurrentMaximumMax}"/>
+                                  Minimum="{Binding ControlCurrentMaximumMin}" Maximum="{Binding ControlCurrentMaximumMax}" MirroredNegativeMinMax="True"/>
 
     
     
@@ -98,7 +98,7 @@
         </TextBlock>
     </Label>
     <customControls:NumericUpDown Grid.Column="1" Grid.Row="3"   Value="{Binding SwitchedVoltage, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource DML}}"  
-                                  Minimum="{Binding SwitchedVoltageMin}" Maximum="{Binding SwitchedVoltageMax}" MirroredNegativeMinMax="True"/>
+                                  Minimum="{Binding SwitchedVoltageMin}" Maximum="{Binding SwitchedVoltageMax}" MirroredNegativeMinMax="{Binding PolarityDCSwitchingVoltageApplicationIsVisible}"/>
 
     <Label Grid.Column="3" Grid.Row="4"  Visibility="{Binding ShowAuxiliaryVoltagePowerSupply2, Converter={StaticResource B2V}}">
         <TextBlock>
