--- a/SCME.WpfControlLibrary/Pages/SSRTUResultPage.xaml
+++ b/SCME.WpfControlLibrary/Pages/SSRTUResultPage.xaml
@@ -42,9 +42,9 @@
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="50"/>
+            <ColumnDefinition Width="10"/>
             <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="50"/>
+            <ColumnDefinition Width="10"/>
         </Grid.ColumnDefinitions>
         <Grid Grid.Column="1" Grid.Row="1">
             <Grid.ColumnDefinitions>
@@ -68,9 +68,9 @@
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <controls:SSRTUResultPageControl Grid.Column="0" DataContext="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:SSRTUResultPage}}, Path=VMPosition1}" Margin="0,0,0,0"/>
+            <controls:SSRTUResultPageControl Grid.Column="0" DataContext="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:SSRTUResultPage}}, Path=VMPosition1}" Margin="10,0,0,0"/>
             <controls:SSRTUResultPageControl Grid.Column="1" DataContext="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:SSRTUResultPage}}, Path=VMPosition2}" Margin="10,0,0,0"/>
             <controls:SSRTUResultPageControl Grid.Column="2" DataContext="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:SSRTUResultPage}}, Path=VMPosition3}" Margin="10,0,0,0"/>
             <controls:AuxiliaryPowerResultUserControl Grid.Column="3" DataContext="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:SSRTUResultPage}}, Path=VMPosition4}" Margin="10,0,0,0"/>
